minijinja/tests/snapshots/test_compiler__codegen@err_too_many_macro_args.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{% macro two_args(a, b) %}\n  {{ a }} and {{ b }}\n{% endmacro %}\n{{ two_args(1, 2, 3) }}"
input_file: minijinja/tests/inputs/err_too_many_macro_args.txt
---
(
    [
        00000 | EmitRaw("{}\n---\n")  [line 1],
        00001 | Jump(12)  [line 3],
        00002 | StoreLocal("b"),
        00003 | StoreLocal("a"),
        00004 | EmitRaw("\n  "),
        00005 | Lookup("a")  [line 4],
        00006 | Emit,
        00007 | EmitRaw(" and "),
        00008 | Lookup("b"),
        00009 | Emit,
        00010 | EmitRaw("\n"),
        00011 | Return,
        00012 | GetClosure,
        00013 | LoadConst(["a", "b"]),
        00014 | BuildMacro("two_args", 2, 0),
        00015 | StoreLocal("two_args"),
        00016 | EmitRaw("\n")  [line 5],
        00017 | LoadConst(1)  [line 6],
        00018 | LoadConst(2),
        00019 | LoadConst(3),
        00020 | CallFunction("two_args", 3),
        00021 | Emit,
    ],
    {},
)
