minijinja/tests/snapshots/test_compiler__codegen@err_undefined_item.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\"seq\": [1, 2, 3]}\n---\n{{ seq[42][23] }}"
input_file: minijinja/tests/inputs/err_undefined_item.txt
---
(
    [
        00000 | EmitRaw("{\"seq\": [1, 2, 3]}\n---\n")  [line 1],
        00001 | Lookup("seq")  [line 3],
        00002 | LoadConst(42),
        00003 | GetItem,
        00004 | LoadConst(23),
        00005 | GetItem,
        00006 | Emit,
    ],
    {},
)
