minijinja/tests/snapshots/test_compiler__codegen@err_undefined_nested_attr.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\"seq\": [1, 2, 3]}\n---\n{{ seq.whatever }}\n{{ seq.whatever.else }}"
input_file: minijinja/tests/inputs/err_undefined_nested_attr.txt
---
(
    [
        00000 | EmitRaw("{\"seq\": [1, 2, 3]}\n---\n")  [line 1],
        00001 | Lookup("seq")  [line 3],
        00002 | GetAttr("whatever"),
        00003 | Emit,
        00004 | EmitRaw("\n"),
        00005 | Lookup("seq")  [line 4],
        00006 | GetAttr("whatever"),
        00007 | GetAttr("else"),
        00008 | Emit,
    ],
    {},
)
