minijinja/tests/snapshots/test_compiler__codegen@escape.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n    \"x\": \"hello\"\n}\n---\n{{'\\'' ~ 'foo'}}\n{{'\\'' ~ x ~ '\\''}}\n{{\"\\'\" ~ x ~ '\\''}}\n{{\"\\'\" ~ x ~ '\\''}}\n{{\"\nhello world\"}}\n{{\"hello\nworld\"}}"
input_file: minijinja/tests/inputs/escape.txt
---
(
    [
        00000 | EmitRaw("{\n    \"x\": \"hello\"\n}\n---\n")  [line 1],
        00001 | LoadConst("'")  [line 5],
        00002 | LoadConst("foo"),
        00003 | StringConcat,
        00004 | Emit,
        00005 | EmitRaw("\n"),
        00006 | LoadConst("'")  [line 6],
        00007 | Lookup("x"),
        00008 | StringConcat,
        00009 | LoadConst("'"),
        00010 | StringConcat,
        00011 | Emit,
        00012 | EmitRaw("\n"),
        00013 | LoadConst("'")  [line 7],
        00014 | Lookup("x"),
        00015 | StringConcat,
        00016 | LoadConst("'"),
        00017 | StringConcat,
        00018 | Emit,
        00019 | EmitRaw("\n"),
        00020 | LoadConst("'")  [line 8],
        00021 | Lookup("x"),
        00022 | StringConcat,
        00023 | LoadConst("'"),
        00024 | StringConcat,
        00025 | Emit,
        00026 | EmitRaw("\n"),
        00027 | LoadConst("\nhello world")  [line 9],
        00028 | Emit,
        00029 | EmitRaw("\n")  [line 10],
        00030 | LoadConst("hello\nworld")  [line 11],
        00031 | Emit,
    ],
    {},
)
