minijinja/tests/snapshots/test_compiler__codegen@escaping.html.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"unsafe\": \"<foo>\"\n}\n---\n<h1>{{ unsafe }}</h1>"
input_file: minijinja/tests/inputs/escaping.html
---
(
    [
        00000 | EmitRaw("{\n  \"unsafe\": \"<foo>\"\n}\n---\n<h1>")  [line 1],
        00001 | Lookup("unsafe")  [line 5],
        00002 | Emit,
        00003 | EmitRaw("</h1>"),
    ],
    {},
)
